# nord-stage-3-interface

./: .gitignore  README.md  launcher.py  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.json  settings.local.json
src/: App.css  App.tsx
src-python/: main.py  patch_parser.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_assistant.rs  lib.rs  main.rs
src/assets/: nord-cc-map.json
src/components/ai/: AiAssistant.css  AiAssistant.tsx  ApiKeyModal.tsx  ParameterCard.tsx
src/components/layout/: Toolbar.css  Toolbar.tsx
src/components/midi/: DeviceSelector.css  DeviceSelector.tsx  MidiMonitor.css  MidiMonitor.tsx
src/components/patchviewer/: PatchPanel.css  PatchPanel.tsx
src/components/sheetmusic/: CaptureControls.css  CaptureControls.tsx  ExportModal.css  ExportModal.tsx  SheetMusicPanel.css  SheetMusicPanel.tsx
src/components/visualizer/: FallingBars.tsx  KeyboardDisplay.css  KeyboardDisplay.tsx  PianoVisualizer.css  PianoVisualizer.tsx
src/hooks/: useAiStream.ts  useMidi.ts  useNoteCapture.ts  useSidecar.ts
src/lib/ai/: nordPrompt.ts  paramParser.ts
src/lib/midi/: MidiEngine.ts  ccMapper.ts  chordRecognizer.ts  musicXmlGenerator.ts  noteQuantizer.ts
src/lib/patch/: ns3fpParser.ts  ns3fpTypes.ts
src/store/: aiStore.ts  midiStore.ts  patchStore.ts  sessionStore.ts
